--- a/web_scraping_code.ipynb
+++ b/web_scraping_code.ipynb
@@ -2748,7 +2748,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def data_loading_unstructured():\n",
+    "    import pandas as pd\n",
+    "    content = []\n",
+    "    df = pd.read_csv('blogs_data_500.csv')\n",
+    "    websites = df['Website'].tolist()\n",
+    "    loader = UnstructuredURLLoader(websites)\n",
+    "    loaded_data = loader.load()\n",
+    "    for data in loaded_data:\n",
+    "        content.append(data.page_content)\n",
+    "    return content\n",
+    "\n",
+    "def data_preprocessing():\n",
+    "    content = data_loading_unstructured()\n",
+    "    df = pd.read_csv('blogs_data_500.csv')\n",
+    "    new_data = pd.DataFrame({'page_content':content})\n",
+    "    df = df.drop('page_content',axis=1)\n",
+    "    concate_df = pd.concat([df, new_data],axis=1)\n",
+    "    concate_df['author_name'] = concate_df['author_name'].apply(lambda x:str(x))\n",
+    "    concate_df['related_topics'] = concate_df['related_topics'].apply(lambda x:str(x))\n",
+    "    concate_df['pdf_links'] = concate_df['related_topics'].apply(lambda x:str(x))\n",
+    "    concate_df['page_content'] = concate_df['page_content'].apply(lambda x:str(x))\n",
+    "    concate_df = concate_df[concate_df['page_content']!=\"A custom errorhandler for 404 responses\"]\n",
+    "    concate_df = concate_df.reset_index(drop=True)\n",
+    "    concate_df['page_content'] = concate_df['page_content'].apply(lambda x:str(x))\n",
+    "    unstructured_data = concate_df.copy()\n",
+    "    for i, rows in unstructured_data.iterrows():\n",
+    "    result = rows[5]\n",
+    "    strings_to_remove = [\n",
+    "        \"with us\\n\\nOur locations\\n\\nMy EY\\n\\nSite map\\n\\nLegal and privacy\\n\\nOpen Facebook profile\\n\\nOpen X profile\\n\\nOpen LinkedIn profile\\n\\nOpen Youtube profile\\n\\nEY refers to the global organization, and may refer to one or more, of the member firms of Ernst & Young Global Limited, each of which is a separate legal entity. Ernst & Young Global Limited, a UK company limited by guarantee, does not provide services to clients.\\n\\nYou are visiting EY in (en)\\n\\nin en\",\n",
+    "        \"EY Logo\\n\\nInsights\\n\\nAsking the better questions that unlock new answers to the working world's most complex issues.\\n\\nExplore\\n\\nTrending topics\\n\\nSee more\\n\\nSee more\\n\\nSpotlight\\n\\nAI insights\\n\\nCEO agenda\\n\\nCFO agenda\\n\\nEY Center for board matters\\n\\nEY podcasts\\n\\nEY webcasts\\n\\nOperations leaders\\n\\nTechnology leaders\\n\\nSee more\\n\\nServices\\n\\nEY helps clients create long-term value for all stakeholders. Enabled by data and technology, our services and solutions provide trust through assurance and help clients transform, grow and operate.\\n\\nExplore\\n\\nSee more\\n\\nSpotlight\\n\\nEY.ai - A unifying platform\\n\\nStrategy, transaction and transformation consulting\\n\\nTechnology transformation\\n\\nTax function operations\\n\\nClimate change and sustainability services\\n\\nEY Ecosystems\\n\\nEY Nexus: business transformation platform\\n\\nIndustries\\n\\nDiscover how EY insights and services are helping to reframe the future of your industry.\\n\\nExplore\\n\\nSee more\\n\\nCase studies\\n\\nAdvanced Manufacturing\\n\\nHow a manufacturer eliminates cost and value leakages with AI-ML\\n\\n03 Jul 2024Vinayak vipul\\n\\nConsulting\\n\\nHow a young cement company grew 2.5x with organizational and functional transformation\\n\\n05 Apr 2024EY India\\n\\nAI\\n\\nHow a state government transformed into an ecotourism haven\\n\\n12 Mar 2024EY India\\n\\nCareers\\n\\nWe bring together extraordinary people, like you, to build a better working world.\\n\\nExplore\\n\\nSee more\\n\\nSpotlight\\n\\nExperienced professionals\\n\\nEY-Parthenon careers\\n\\nStudent and entry level programs\\n\\nTalent community\\n\\nAbout us\\n\\nAt EY, our purpose is building a better working world. The insights and services we provide help to create long-term value for clients, people and society, and to build trust in the capital markets.\\n\\nExplore\\n\\nSee more\\n\\nSpotlight\\n\\nEY expands its EY ESG Compass platform with new innovative use-cases\\n\\n06 Aug 2024EY India\\n\\nAddressing customs, payment, and logistics challenges key to stronger e-commerce exports growth from India: EY-ASSOCHAM report\\n\\n24 Jul 2024EY India\\n\\nPE/VC investments in May 2024 exceeded US$6.9 billion across 115 deals, 54% growth Y-o-Y: EY-IVCA report\\n\\n01 Jul 2024EY India\\n\\nSearch\\n\\nSee all results for ' '\\n\\nNo results have been found\\n\\nTopics\\n\\nSee All\\n\\nGeneral\\n\\nSee All\\n\\nPeople\\n\\nSee All\\n\\nRecent Searches\\n\\nTrending\\n\\nUnion Budget 2024-25: Accelerating fiscal consolidation for sustained growth\\n\\nUnion Budget 2024-25: Drive fiscal consolidation for lower interest rates, boost private investment, and job growth.\\n\\n26 Jul 2024 Tax\\n\\nHow India Inc. can navigate the road to financial resilience\\n\\nExplore key findings from the 2024 Cost of Capital Survey, revealing insights into India Inc.'s financial resilience and strategic growth.\\n\\n17 Jul 2024\\n\\nImpact of new GST law on skill-based online games\\n\\nExplore the effects of the new GST law on skill-based online gaming. Understand the implications for players and industry with our in-depth analysis.\\n\\n04 Jul 2024 Tax\\n\\nMy EY My EY\\n\\nSelect your location\\n\\nLocal\",\n",
+    "        \"Facebook\\n\\nTwitter\\n\\nLinkedIn\\n\\nLink Copied\",\n",
+    "        \"Related articles\",\n",
+    "        \"Rebecca Dabbs\\n\\nHow EY can help\\n\\nEnvironment, health and safety\\n\\nEY CCaSS teams can help reduce the risk of EHS incidents and support decision-making to improve outcomes associated with EHS. Find out how.\\n\\nRead more\\n\\nConnect\",\n",
+    "        \"\\n\\nRead more\\n\\nConnect \",\n",
+    "        \" sites\\n\\n\",\n",
+    "        \"Related topics\",\n",
+    "        \"Read more\",\n",
+    "        \"Connect \",\n",
+    "        \"Subscribe\",\n",
+    "        \"Contact us to learn more\",\n",
+    "        \"Like what you’ve seen? Get in touch to learn more.\",\n",
+    "        \"Direct to your inbox\",\n",
+    "        \"Stay up to date with our Editor‘s picks newsletter.\"\n",
+    "    ]\n",
+    "    for string_to_remove in strings_to_remove:\n",
+    "        result = re.sub(re.escape(string_to_remove), '', result)\n",
+    "    unstructured_data.at[i, 'page_content'] = result\n",
+    "    return unstructured_data"
+   ]
   }
  ],
  "metadata": {
